feat: improve responsive

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,10 +16,10 @@
             <a id="mentions-btn" data-toggle="modal" data-target="#mentions">Mentions légales</a>
             <a href="mailto:contact@devmachine.fr">contact@devmachine.fr</a>
             <div>
-                <a href="https://twitter.com/devmachine_fr" target="_blank" class="ml-3">
+                <a href="https://twitter.com/devmachine_fr" target="_blank">
                     <img src="/assets/images/logos/twitter.png" alt="Twitter" height="18" class="mr-3">
                 </a>
-                <a href="https://fr.linkedin.com/company/devmachine" target="_blank">
+                <a href="https://fr.linkedin.com/company/devmachine" target="_blank" class="ml-3">
                     <img src="/assets/images/logos/linkedin.png" alt="LinkedIn" height="18">
                 </a>
             </div>
