--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,12 +2,14 @@ footer {
   background-color: $secondary;
 
   div.links-container {
+    gap: 1rem;
     a {
       color: $white;
     }
   }
 
   div.bottom-container {
+    gap: 1rem;
     a {
       color: $light-grey;
     }
