feat: savoir-faire responsive

--- a/_sass/_savoir-faire.scss
+++ b/_sass/_savoir-faire.scss
@@ -1,3 +1,9 @@
 section#savoir-faire-intro {
   background-color: rgba(252, 229, 106, 0.1);
 }
+
+section#savoir-faire-piliers {
+  li {
+    color: $secondary;
+  }
+}
