feat: add accordion for savoir-faire page

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -18,6 +18,9 @@
 @import "code";
 @import "_post";
 
+// PLUGINS
+@import "_accordion";
+
 // Global styling for this template
 body {
   overflow-x: hidden;
