--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -11,8 +11,9 @@ section#contact-items {
     background-position: 50%;
     border-radius: 16px;
     padding: 3rem;
-    
-    div.row {
+
+    div.contact-items-container {
+      flex-direction: row;
       flex-wrap: nowrap;
       justify-content: space-evenly;
       align-items: center;
@@ -20,19 +21,47 @@ section#contact-items {
       border-radius: 16px;
       padding: 5rem 3rem;
 
-      img {
-        margin: 0 auto 2rem;
-        max-width: 100%;
-        width: 3rem;
+      @media (max-width: $sm-size) {
+        flex-direction: column;
+        justify-content: stretch;
+        padding: 2rem 1rem;
       }
-      p {
-        text-align: center;
-        color: $secondary;
-      }
-      a {
-        color: $secondary;
-        text-decoration: underline;
-        font-weight: 600;
+
+      div.contact-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        
+        img {
+          margin: 0 auto 2rem;
+          max-width: 100%;
+          width: 3rem;
+        }
+        p {
+          text-align: center;
+          color: $secondary;
+          margin: 0;
+        }
+        a {
+          color: $secondary;
+          text-decoration: underline;
+          font-weight: 600;
+        }
+
+        // Mode phone, on inverse
+        @media (max-width: $sm-size) {
+          flex-direction: row;
+          width: 100%;
+          margin-top: 1rem;
+          img {
+            margin: 0;
+          }
+          div.contact-data {
+            width: 70%;
+            p { text-align: left }
+          }
+        }
       }
     }
   }
