feat: convert btn to a tag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,9 @@ layout: default
 ---
 <section id="post-header">
   <div class="container">
-    <button class="dm-btn">
-      <a href="/blog">
-        <span aria-hidden="true" class="fas fa-chevron-left"></span><span>Retour</span>
-      </a>
-    </button>
+    <a class="dm-btn" href="/blog">
+      <span aria-hidden="true" class="fas fa-chevron-left"></span>Retour
+    </a>
     <div class="text-center">
       <h1 class="section-heading">{{ page.title}}</h1>
       <p class="text-orange">par {{ page.author }} le {{ page.date | date: "%d/%m/%Y" }}</p>
