--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -2,13 +2,15 @@ $blue-bg: rgba(106, 191, 252, 0.1);
 
 section#contact-intro {
   background-color: $blue-bg;
+  img {
+    max-height: 30vh;
+  }
 }
 
 section#contact-items {
   div.container {
-    background-image: url("/assets/images/website/dm-group.jpg");
+    background-image: url("/assets/images/website/page-contact/items/bg.svg");
     background-repeat: no-repeat;
-    background-position: 50%;
     border-radius: 16px;
     padding: 3rem;
 
@@ -25,18 +27,18 @@ section#contact-items {
         flex-direction: column;
         justify-content: stretch;
         padding: 2rem 1rem;
+        row-gap: 2rem;
       }
 
       div.contact-item {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         
         img {
           margin: 0 auto 2rem;
           max-width: 100%;
-          width: 3rem;
         }
         p {
           text-align: center;
@@ -56,9 +58,14 @@ section#contact-items {
           margin-top: 1rem;
           img {
             margin: 0;
+            width: 10%;
+            &.path {
+              width: 20%;
+            }
           }
           div.contact-data {
-            width: 70%;
+            width: 60%;
+            margin-left: 20%;
             p { text-align: left }
           }
         }
