feat: improve navbar

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav
-      class="navbar navbar-expand-lg navbar-dark"
+      class="navbar navbar-expand-lg navbar-dark fixed-top"
       id="mainNav"
       xmlns="http://www.w3.org/1999/html"
     >
@@ -14,14 +14,14 @@
           aria-label="Toggle navigation"
         >
           Menu
-          <i class="fas fa-bars"></i>
+          <span aria-hidden="true" class="fas fa-bars"></span>
         </button>
         <a href="/">
           <img
             src="/assets/images/website/devmachine.svg"
             class="logo-dm"
             width="200"
-            alt="logo devmachine"
+            alt="Logo DEVmachine"
           />
         </a>
         <div
