--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/github.css">
 
+    <script src="/assets/scripts/scroll-listener.js"></script>
+
     {% include analytics.html %}
   </head>
   <body
