--- a/_sass/_offre.scss
+++ b/_sass/_offre.scss
@@ -14,7 +14,7 @@ section#offre-separate {
   padding: 0;
   height: 1rem;
   background-image: url('/assets/images/website/page-offre/separation/Wall.svg');
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
 }
 
 // PRESTATIONS
